📐 - Fix margins for content on mobile

--- a/style.css
+++ b/style.css
@@ -175,7 +175,7 @@ article {
   max-width: 40ch;
   margin-bottom: 3rem;
   scroll-margin-top: 5rem;
-  padding-inline: 1rem;
+  padding-inline: 1.75rem;
   text-align: justify;
 }
 
